# player_project

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
transmission_service/config/: settings.json
web_service/: config.py  main.py
web_service/models/: users.py
web_service/routers/: main.py  users.py
web_service/static/css/: signin.css
web_service/templates/: index.html
