[tool.poetry]
name = "player_project"
version = "0.1.0"
description = ""
authors = ["esmaksimov"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
transmission-rpc = "^3.3.0"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
